# Hydrolib-soft

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  README.md
hydrolib_acs/: CMakeLists.txt
hydrolib_acs/include/: hydrolib_acs.hpp
hydrolib_acs/tests/: test_hydrolib_acs.cpp
hydrolib_bus/hydrolib_bus_application/: CMakeLists.txt
hydrolib_bus/hydrolib_bus_application/include/: hydrolib_bus_application_commands.hpp  hydrolib_bus_application_master.hpp  hydrolib_bus_application_slave.hpp
hydrolib_bus/hydrolib_bus_application/tests/: test_hydrolib_bus_application.cpp  test_hydrolib_bus_application.hpp
hydrolib_bus/hydrolib_bus_datalink/: CMakeLists.txt
hydrolib_bus/hydrolib_bus_datalink/include/: hydrolib_bus_datalink_deserializer.hpp  hydrolib_bus_datalink_message.hpp  hydrolib_bus_datalink_rx_info.hpp  hydrolib_bus_datalink_serializer.hpp  hydrolib_bus_datalink_stream.hpp  hydrolib_dummy_allocator.hpp
hydrolib_bus/hydrolib_bus_datalink/tests/: test_bus_datalink_serialize_deserialize.cpp  test_hydrolib_bus_datalink.cpp  test_hydrolib_bus_datalink.hpp
hydrolib_bus/hydrolib_cobs/: CMakeLists.txt
hydrolib_bus/hydrolib_cobs/include/: hydrolib_cobs.hpp
hydrolib_bus/hydrolib_cobs/tests/: test_hydrolib_cobs.cpp
hydrolib_device/: CMakeLists.txt
hydrolib_device/include/: hydrolib_control_system_device.hpp  hydrolib_device.hpp  hydrolib_device_manager.hpp  hydrolib_stream_device.hpp  hydrolib_thrust_generator_device.hpp  hydrolib_thruster_device.hpp
hydrolib_device/tests/: test_hydrolib_device_manager.cpp  test_hydrolib_device_stream.cpp
hydrolib_filter/: CMakeLists.txt
hydrolib_filter/include/: hydrolib_iir.hpp
hydrolib_filter/tests/: test_filter.cpp
hydrolib_logger/: CMakeLists.txt
hydrolib_logger/common/include/: hydrolib_logger.hpp
hydrolib_logger/include/: hydrolib_log.hpp  hydrolib_log_distributor.hpp  hydrolib_log_manager.hpp  hydrolib_log_observer.hpp  hydrolib_logger.hpp
hydrolib_logger/junk/include/: hydrolib_log.hpp  hydrolib_log_observer.hpp  hydrolib_logger.hpp
hydrolib_logger/mock/: CMakeLists.txt
hydrolib_logger/mock/include/: hydrolib_logger_mock.hpp
hydrolib_logger/mock/src/: hydrolib_logger_mock.cpp
hydrolib_logger/specific/hydrolib/: hydrolib_log_macro.hpp
hydrolib_logger/specific/none/: hydrolib_log_macro.hpp
hydrolib_logger/src/: hydrolib_logger.cpp
hydrolib_logger/tests/: test_hydrolib_logger.cpp
hydrolib_math/: CMakeLists.txt
hydrolib_math/include/: hydrolib_fixed_point.hpp  hydrolib_linear_equations.hpp  hydrolib_quaternions.hpp  hydrolib_rotations.hpp  hydrolib_vector3d.hpp
hydrolib_math/tests/: test_fixed_point.cpp  test_linear_equations.cpp  test_quternions.cpp  test_rotations.cpp  test_vector3d.cpp
hydrolib_pid/: CMakeLists.txt
hydrolib_pid/include/: hydrolib_pid.hpp
hydrolib_pid/tests/: test_hydrolib_pid.cpp
hydrolib_ring_queue/: CMakeLists.txt
hydrolib_ring_queue/include/: hydrolib_ring_queue.h  hydrolib_ring_queue.hpp
hydrolib_ring_queue/src/: hydrolib_ring_queue.c
hydrolib_ring_queue/tests/: test.cpp  test_hydrolib_ring_queue.cpp  test_hydrolib_rq_complex.cpp  test_hydrolib_rq_env.cpp  test_hydrolib_rq_env.hpp  test_hydrolib_rq_find.cpp  test_hydrolib_rq_info.cpp  test_hydrolib_rq_other.cpp  test_hydrolib_rq_pull.cpp  test_hydrolib_rq_pull_byte.cpp  test_hydrolib_rq_push.cpp  test_hydrolib_rq_push_byte.cpp  test_hydrolib_rq_read.cpp
hydrolib_serial_protocol/: CMakeLists.txt  hydrolib_serial_protocol.c
hydrolib_serial_protocol/include/: hydrolib_serial_protocol.h  hydrolib_serial_protocol_commands.hpp  hydrolib_serial_protocol_concepts.hpp  hydrolib_serial_protocol_core.hpp  hydrolib_serial_protocol_deserializer.hpp  hydrolib_serial_protocol_interpreter.hpp  hydrolib_serial_protocol_master.hpp  hydrolib_serial_protocol_message.hpp  hydrolib_serial_protocol_pack.hpp  hydrolib_serial_protocol_serializer.hpp  hydrolib_sp_message_processor.h
hydrolib_serial_protocol/src/: hydrolib_serial_protocol.c  hydrolib_serial_protocol_core.cpp  hydrolib_serial_protocol_pack.cpp  hydrolib_sp_message_processor.c
hydrolib_serial_protocol/tests/: test_hydrolib_sp.cpp  test_hydrolib_sp_communicate_env.hpp  test_hydrolib_sp_communicate_read.cpp  test_hydrolib_sp_core_env.cpp  test_hydrolib_sp_core_env.hpp  test_hydrolib_sp_core_read.cpp  test_hydrolib_sp_core_write.cpp  test_hydrolib_sp_env.cpp  test_hydrolib_sp_env.hpp  test_hydrolib_sp_interpreter_env.hpp  test_hydrolib_sp_pack.cpp  test_hydrolib_sp_serialize_env.cpp  test_hydrolib_sp_serialize_env.hpp  test_hydrolib_sp_serialize_error.cpp  test_hydrolib_sp_serialize_read.cpp  test_hydrolib_sp_serialize_responce.cpp  test_hydrolib_sp_serialize_write.cpp
hydrolib_shell/: CMakeLists.txt
hydrolib_shell/include/: hydrolib_shell.hpp  hydrolib_shell_environment.hpp  hydrolib_shell_input.hpp  hydrolib_shell_interpreter.hpp  hydrolib_shell_ostream.hpp  hydrolib_shell_params.hpp  hydrolib_shell_parser.hpp  hydrolib_shell_terminal.hpp  hydrolib_shell_viewer.hpp
hydrolib_shell/tests/: pty_line_device.cpp  pty_line_device.hpp  test_hydrolib_shell.cpp  test_hydrolib_shell_input.cpp  test_hydrolib_shell_interpreter.cpp  test_hydrolib_shell_ostream.cpp  test_hydrolib_shell_parser.cpp  test_hydrolib_shell_terminal.cpp  test_hydrolib_shell_view.cpp
hydrolib_streams/mock/: CMakeLists.txt
hydrolib_streams/mock/include/: mock_stream.hpp
hydrolib_streams/mock/src/: mock_stream.cpp
hydrolib_strings/: CMakeLists.txt
hydrolib_strings/include/: hydrolib_convertible_to_bytes.hpp  hydrolib_cstring.hpp  hydrolib_formatable_string.hpp  hydrolib_strings.hpp
hydrolib_strings/src/: hydrolib_strings.cpp
hydrolib_strings/tests/: test_hydrolib_strings.cpp
hydrolib_thrust_generator/: CMakeLists.txt
hydrolib_thrust_generator/include/: hydrolib_thrust_generator.hpp  hydrolib_thrusters_data.hpp
hydrolib_thrust_generator/tests/: test_hydrolib_thrust_generator.cpp
hydrolib_vectornav/: CMakeLists.txt
hydrolib_vectornav/include/: hydrolib_vectornav.hpp  hydrolib_vectronav.hpp
hydrolib_vectornav/tests/: test_hydrolib_vectornav.cpp
(+71 files in other folders)
